name:                SampleBanana
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nabechan777/SampleBanana#readme
license:             BSD3
license-file:        LICENSE
author:              DaikiWatanabe
maintainer:          daiki7watanabe@gmail.com
copyright:           2017 DaikiWatanabe
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SampleImpl
  build-depends:       base >= 4.7 && < 5
                     , reactive-banana
                     , reactive-banana-wx
                     , wx
  default-language:    Haskell2010

executable Sample1
  hs-source-dirs:      app1
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SampleBanana
  default-language:    Haskell2010

executable Sample2
  hs-source-dirs:      app2
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SampleBanana
                     , reactive-banana
                     , wx
  default-language:    Haskell2010

executable Sample3
  hs-source-dirs:      app3
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SampleBanana
                     , reactive-banana
                     , wx
  default-language:    Haskell2010


executable Sample4
    hs-source-dirs:      app4
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , reactive-banana
    default-language:    Haskell2010

test-suite SampleBanana-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SampleBanana
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nabechan777/SampleBanana

custom-setup
  setup-depends:
    base >= 4.2 && < 5,
    Cabal >= 1.23,
    cabal-macosx >= 0.1 && < 0.3
