name:                SampleByYampa
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nabechan777/SampleByYampa#readme
license:             BSD3
license-file:        LICENSE
author:              DaikiWatanabe
maintainer:          daiki7watanabe@gmail.com
copyright:           2017 DaikiWatanabe
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SampleImpl
  build-depends:       base >= 4.7 && < 5
                     , Yampa
  default-language:    Haskell2010

executable SampleByYampa-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SampleByYampa
  default-language:    Haskell2010

test-suite SampleByYampa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SampleByYampa
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nabechan777/SampleByYampa
