name:                SampleGLUT
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nabechan777/SampleGLUT#readme
license:             BSD3
license-file:        LICENSE
author:              DaikiWatanabe
maintainer:          daiki7watanabe@gmail.com
copyright:           2017 DaikiWatanabe
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sample1
                     , Sample2
                     , Sample3
                     , Sample4
                     , Sample5
                     , Sample6
  build-depends:       base >= 4.7 && < 5
                     , GLUT
  default-language:    Haskell2010

executable SampleGLUT-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SampleGLUT
  default-language:    Haskell2010

test-suite SampleGLUT-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SampleGLUT
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nabechan777/SampleGLUT
